Change History
==============

0.11 (unreleased)
-----------------

- added a test environement and a basic doctest to validate
  the recipe.
  [tarek]

0.10
----

- Calculate the package working set outside of the recipe constructor. Closes
  https://bugs.launchpad.net/collective.buildout/+bug/180084
  [rochael]

0.9
---

- Added `invalidation-queue-size` and `storage-number` options.
  [hannosch]

- Merged rochael-blobsupport branch. Added support for ZODB 3.8 blob storage
  configuration. This adds the blob-storage option. This closes
  https://bugs.launchpad.net/collective.buildout/+bug/179115 and
  https://bugs.launchpad.net/collective.buildout/+bug/179117.
  [rochael, hannosch]

- Renamed `zope-conf-additional` option to `zeo-conf-additional`.
  [rochael]

0.8
---

- Small documentation update. Added link to the bugtracker.
  [hannosch]

- Have PID file's location default to `${buildout:directory}/var/${name}.pid`.
  Keeping the PID file in $INSTANCE_HOME gives trouble when buildout rebuilds
  the part.
  [nouri, mbenali]

0.7
---

- Change default location of zeo socket to var.
  [smcmahon]

- Add option to set socket-name.
  [smcmahon]

0.6
---

- Move the documentation to a separate README.txt and read that from setup.py.
  [wichert]

- Add a wrapper around zeopack which inserts default options for our ZEO server.
  [wichert]

0.5
---

- Added an option to set the effective-user.
  [optilude]

0.3
---

- Updated setup.py.
  [optilude]

0.2
---

- Similarly, there are some hardcoded dependencies on $INSTANCE_HOME/etc/.
  [optilude]

- Documented options, cleaned up code, and added the ability to use a manual
  zeo.conf.
  [optilude]

- Make this work, at least on OS X and probably unix-like system. It wouldn't
  surprise me if this needs adjustment for Windows in the same way that we do
  in plone.recipe.zope2instance. :-(
  [optilude]

0.1
---

- Initial implementation.
  [regebro, hannosch]