@@ -4,6 +4,9 @@ Change History
 0.11 (unreleased)
 -----------------
 
+- added a `zeo-log-custom` option.
+  [tarek]
+
 - added a test environement and a basic doctest to validate
   the recipe.
   [tarek]
